--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NeuroSymbolic Cognitive Decline Analysis System</title>
+    <title>Cognitive Decline Analysis System</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="container">
         <header class="header">
-            <h1>NeuroSymbolic Cognitive Decline Analysis System</h1>
+            <h1>Cognitive Decline Analysis System</h1>
             <p class="subtitle">Research-Based AI for Studying Cognitive Impact of Long-term AI Usage</p>
         </header>
 
